syntax = "proto3";
package lottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/params.proto";
import "lottery/lottery_item.proto";
// this line is used by starport scaffolding # 1

option go_package = "lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lottery/lottery/params";
  }
  // Queries a LotteryItem by index.
	rpc LotteryItem(QueryGetLotteryItemRequest) returns (QueryGetLotteryItemResponse) {
		option (google.api.http).get = "/lottery/lottery/lottery_item";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLotteryItemRequest {}

message QueryGetLotteryItemResponse {
	LotteryItem LotteryItem = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
